--- a/src/gui_css.fxml
+++ b/src/gui_css.fxml
@@ -27,7 +27,7 @@
             <SeparatorMenuItem mnemonicParsing="false" />
             <MenuItem mnemonicParsing="false" text="Preferences…" />
             <SeparatorMenuItem mnemonicParsing="false" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
+            <MenuItem mnemonicParsing="false" text="Quit" onAction="#quitMItem" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Edit">
