--- a/src/roulette.fxml
+++ b/src/roulette.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="600.0" prefWidth="100.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RouletteGUI">
+<VBox prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RouletteGUI">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -50,9 +50,9 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="598.0" prefWidth="897.0" VBox.vgrow="ALWAYS">
+    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="600.0" prefWidth="1000.0" VBox.vgrow="ALWAYS">
       <children>
-            <GridPane prefHeight="848.0" prefWidth="1381.0">
+            <GridPane prefHeight="600.0" prefWidth="1000.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="96.0" minWidth="10.0" prefWidth="62.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="433.0" minWidth="10.0" prefWidth="134.0" />
@@ -90,9 +90,9 @@
                   <RadioButton fx:id="dozen2rb" mnemonicParsing="false" text="Dozen 2" GridPane.columnIndex="2" GridPane.rowIndex="6" />
                   <RadioButton fx:id="oddrb" mnemonicParsing="false" text="Odd" GridPane.columnIndex="2" GridPane.rowIndex="7" />
                   <RadioButton fx:id="singlenumrb" mnemonicParsing="false" text="Single Number" GridPane.columnIndex="2" GridPane.rowIndex="8" />
-                  <Label text="Input the single number:" GridPane.columnIndex="3" GridPane.rowIndex="8">
+                  <Label prefHeight="35.0" prefWidth="221.0" text="Input the single number:" GridPane.columnIndex="3" GridPane.rowIndex="8">
                      <font>
-                        <Font size="24.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                   <TextField fx:id="singlenumtxt" GridPane.columnIndex="4" GridPane.rowIndex="8" />
