--- a/src/blackjack.fxml
+++ b/src/blackjack.fxml
@@ -11,9 +11,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="574.0" prefWidth="822.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BlackJackGUI">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BlackJackGUI">
    <children>
-      <HBox layoutX="9.0" layoutY="70.0" prefHeight="100.0" prefWidth="660.0">
+      <HBox layoutX="9.0" layoutY="70.0" prefHeight="100.0" prefWidth="800.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="75.0">
          <children>
             <GridPane fx:id="dealerGrid" gridLinesVisible="true" prefHeight="104.0" prefWidth="655.0" HBox.hgrow="ALWAYS">
               <columnConstraints>
@@ -42,7 +42,7 @@
             </GridPane>
          </children>
       </HBox>
-      <HBox layoutX="9.0" layoutY="226.0" prefHeight="100.0" prefWidth="660.0">
+      <HBox layoutX="9.0" layoutY="226.0" prefHeight="100.0" prefWidth="800.0" AnchorPane.leftAnchor="9.0" AnchorPane.rightAnchor="191.0" AnchorPane.topAnchor="225.0">
          <children>
             <GridPane fx:id="dealerGrid1" gridLinesVisible="true" prefHeight="100.0" prefWidth="659.0" HBox.hgrow="ALWAYS">
                <children>
@@ -72,19 +72,19 @@
          </children></HBox>
       <Button fx:id="hitButton" layoutX="120.0" layoutY="341.0" mnemonicParsing="false" onAction="#hitAction" text="Hit" />
       <Button fx:id="holdButton" layoutX="235.0" layoutY="341.0" mnemonicParsing="false" onAction="#holdAction" text="Hold" />
-      <Label layoutX="14.0" layoutY="14.0" prefHeight="56.0" prefWidth="583.0" text="Dealers Hand">
+      <Label layoutX="14.0" layoutY="14.0" prefHeight="56.0" prefWidth="583.0" text="Dealers Hand" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="170.0" prefHeight="56.0" prefWidth="583.0" text="Your Hand">
+      <Label layoutX="14.0" layoutY="170.0" prefHeight="56.0" prefWidth="583.0" text="Your Hand" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="175.0">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
       <Button layoutX="510.0" layoutY="341.0" mnemonicParsing="false" onAction="#exit" text="Exit" />
-      <Label fx:id="dealerScore" layoutX="714.0" layoutY="110.0" text="Label" />
-      <Label fx:id="playerScore" layoutX="714.0" layoutY="266.0" text="Label" />
+      <Label fx:id="dealerScore" layoutX="889.0" layoutY="110.0" text="Label" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="110.0" />
+      <Label fx:id="playerScore" layoutX="889.0" layoutY="266.0" text="Label" AnchorPane.rightAnchor="76.0" AnchorPane.topAnchor="265.0" />
       <Button fx:id="startButton" layoutX="356.0" layoutY="403.0" mnemonicParsing="false" onAction="#startAction" text="Start Hand" />
       <MenuBar prefHeight="32.0" prefWidth="822.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
